# SPL_Assignment1

./: Action.cpp  CMakeLists.txt  Customer.cpp  Studio.cpp  Trainer.cpp  Workout.cpp  Workout.h  makefile  modularB.ipynb  possibleCommands.txt
include/: Action.h  Customer.h  Studio.h  Trainer.h  Workout.h
src/: Action.cpp  Customer.cpp  ExampleInput.txt  Studio.cpp  Trainer.cpp  Workout.cpp  error_creation.txt  main.cpp
